--- a/MyScience/Begin/MyScience/MyScience.csproj
+++ b/MyScience/Begin/MyScience/MyScience.csproj
@@ -90,6 +90,11 @@
     <Compile Include="RankPage.xaml.cs">
       <DependentUpon>RankPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Service References\MyScienceService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="SettingPage.xaml.cs">
       <DependentUpon>SettingPage.xaml</DependentUpon>
     </Compile>
@@ -137,6 +142,28 @@
   <ItemGroup>
     <None Include="Properties\AppManifest.xml" />
     <None Include="Properties\WMAppManifest.xml" />
+    <None Include="Service References\MyScienceService\MyScience.MyScienceService.Project.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\MyScienceService\MyScienceService.disco" />
+    <None Include="Service References\MyScienceService\configuration91.svcinfo" />
+    <None Include="Service References\MyScienceService\configuration.svcinfo" />
+    <None Include="Service References\MyScienceService\MyScienceService.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\MyScienceService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <Content Include="ServiceReferences.ClientConfig" />
+    <None Include="Service References\MyScienceService\MyScienceService.wsdl" />
+    <None Include="Service References\MyScienceService\MyScienceService1.wsdl" />
+    <None Include="Service References\MyScienceService\MyScienceService1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\MyScienceService\MyScienceService2.xsd">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="ApplicationIcon.png">
@@ -160,7 +187,12 @@
     </Content>
     <Content Include="SplashScreenImage.jpg" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\MyScienceService\" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\Silverlight for Phone\$(TargetFrameworkVersion)\Microsoft.Silverlight.$(TargetFrameworkProfile).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\Silverlight for Phone\$(TargetFrameworkVersion)\Microsoft.Silverlight.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
