--- a/PhoneCloud/TierWebLayer/Web.config
+++ b/PhoneCloud/TierWebLayer/Web.config
@@ -11,9 +11,11 @@
          connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true"
          providerName="System.Data.SqlClient" />
   </connectionStrings>-->
+
   <connectionStrings>
     <add name="MyScienceEntities" connectionString="metadata=res://*/MyScienceDB.csdl|res://*/MyScienceDB.ssdl|res://*/MyScienceDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mma1mtoeql.database.windows.net;initial catalog=users;persist security info=True;user id=dynovader;password=592Mayfield; multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+  
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
 
@@ -56,7 +58,7 @@
       <serviceBehaviors>
         <behavior name="">
           <serviceMetadata httpGetEnabled="true" />
-          <serviceDebug includeExceptionDetailInFaults="false" />
+          <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
