Adding leaderboard functionality

--- a/PhoneCloud/TierDataLayer/TierDataLayer.csproj
+++ b/PhoneCloud/TierDataLayer/TierDataLayer.csproj
@@ -52,6 +52,7 @@
     </Compile>
     <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TopScorer.cs" />
   </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="MyScienceDB.edmx">
