--- a/MyScience/Begin/MyScience/MyScience.csproj
+++ b/MyScience/Begin/MyScience/MyScience.csproj
@@ -141,14 +141,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\AppManifest.xml" />
+    <None Include="Properties\DataSources\System.Uri.datasource" />
     <None Include="Properties\WMAppManifest.xml" />
     <None Include="Service References\MyScienceService\MyScience.MyScienceService.Project.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\MyScienceService\MyScience.MyScienceService.Submission.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Service References\MyScienceService\MyScience.MyScienceService.TopScorer.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Service References\MyScienceService\MyScience.MyScienceService.User.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\MyScienceService\MyScience.MyScienceService.user1.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Service References\MyScienceService\Service1.wsdl" />
@@ -161,6 +168,12 @@
     <None Include="Service References\MyScienceService\Service12.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Service References\MyScienceService\Service13.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\MyScienceService\Service14.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <Resource Include="Images\naran.png" />
     <None Include="Service References\MyScienceService\Service1.disco" />
     <None Include="Service References\MyScienceService\configuration91.svcinfo" />
@@ -169,7 +182,9 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
-    <Content Include="ServiceReferences.ClientConfig" />
+    <Content Include="ServiceReferences.ClientConfig">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="ApplicationIcon.png">
