--- a/MyScienceOnCloud/MyScienceServiceWebRole/MyScienceServiceWebRole.csproj
+++ b/MyScienceOnCloud/MyScienceServiceWebRole/MyScienceServiceWebRole.csproj
@@ -58,10 +58,14 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Global.asax" />
     <Content Include="Service1.svc" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AzureLocalStorageTraceListener.cs" />
+    <Compile Include="Global.asax.cs">
+      <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
     <Compile Include="MyScienceDB.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -73,6 +77,7 @@
     </Compile>
     <Compile Include="IService1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Submission.cs" />
     <Compile Include="TopScorer.cs" />
     <Compile Include="User.cs" />
     <Compile Include="WebRole.cs" />
@@ -81,7 +86,9 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="MyScienceDB.edmx">
