--- a/MyScience/Begin/MyScience/MyScience.csproj
+++ b/MyScience/Begin/MyScience/MyScience.csproj
@@ -162,6 +162,7 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Service References\MyScienceService\Service11.wsdl" />
+    <None Include="Service References\MyScienceService\Service111.wsdl" />
     <None Include="Service References\MyScienceService\service15.xsd">
       <SubType>Designer</SubType>
     </None>
@@ -177,13 +178,27 @@
     <None Include="Service References\MyScienceService\service154.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Service References\MyScienceService\service155.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\MyScienceService\service156.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\MyScienceService\service157.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\MyScienceService\service158.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\MyScienceService\service159.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <Resource Include="Images\naran.png" />
     <Resource Include="Images\sunshine.jpg" />
     <Resource Include="Images\sunshine2.jpg" />
     <Resource Include="Images\sunshine3.jpg" />
     <Resource Include="Images\unknownuser.jpg" />
     <Resource Include="Images\camera_icon_1.gif" />
-    <None Include="Service References\MyScienceService\Service1.disco" />
     <None Include="Service References\MyScienceService\configuration91.svcinfo" />
     <None Include="Service References\MyScienceService\configuration.svcinfo" />
     <None Include="Service References\MyScienceService\Reference.svcmap">
@@ -191,6 +206,7 @@
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
     <None Include="Service References\MyScienceService\service11.disco" />
+    <None Include="Service References\MyScienceService\service111.disco" />
     <Content Include="ServiceReferences.ClientConfig">
       <SubType>Designer</SubType>
     </Content>
