--- a/MyScience/Begin/MyScience/MyScience.csproj
+++ b/MyScience/Begin/MyScience/MyScience.csproj
@@ -158,11 +158,8 @@
     <None Include="Service References\MyScienceService\MyScience.MyScienceService.User.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Service References\MyScienceService\MyScience.MyScienceService.user1.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
     <None Include="Service References\MyScienceService\Service11.wsdl" />
-    <None Include="Service References\MyScienceService\Service111.wsdl" />
+    <None Include="Service References\MyScienceService\Service12.wsdl" />
     <None Include="Service References\MyScienceService\service15.xsd">
       <SubType>Designer</SubType>
     </None>
@@ -178,19 +175,13 @@
     <None Include="Service References\MyScienceService\service154.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\MyScienceService\service155.xsd">
+    <None Include="Service References\MyScienceService\Service16.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\MyScienceService\service156.xsd">
+    <None Include="Service References\MyScienceService\Service17.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\MyScienceService\service157.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Service References\MyScienceService\service158.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Service References\MyScienceService\service159.xsd">
+    <None Include="Service References\MyScienceService\Service18.xsd">
       <SubType>Designer</SubType>
     </None>
     <Resource Include="Images\naran.png" />
@@ -206,7 +197,7 @@
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
     <None Include="Service References\MyScienceService\service11.disco" />
-    <None Include="Service References\MyScienceService\service111.disco" />
+    <None Include="Service References\MyScienceService\Service111.disco" />
     <Content Include="ServiceReferences.ClientConfig">
       <SubType>Designer</SubType>
     </Content>
