--- a/MyScience/Begin/MyScience/MyScience.csproj
+++ b/MyScience/Begin/MyScience/MyScience.csproj
@@ -197,6 +197,7 @@
     <Resource Include="Images\myScienceOrange.png" />
     <Resource Include="Images\myScienceGreen.png" />
     <Resource Include="Images\myScienceOrange2.png" />
+    <Resource Include="Images\refresh-icon.png" />
     <Content Include="ServiceReferences.ClientConfig">
       <SubType>Designer</SubType>
     </Content>
