Change to Lazy loading and add progress bar for submitting

--- a/MyScience/Begin/MyScience/MyScience.csproj
+++ b/MyScience/Begin/MyScience/MyScience.csproj
@@ -110,6 +110,7 @@
     <Compile Include="SubmissionPage.xaml.cs">
       <DependentUpon>SubmissionPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="TaskInfo.cs" />
     <Compile Include="User.cs" />
     <Compile Include="ViewModels\ItemViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
