--- a/MyScience/Begin/MyScience/MyScience.csproj
+++ b/MyScience/Begin/MyScience/MyScience.csproj
@@ -83,6 +83,9 @@
       <DependentUpon>DetailsPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Field.cs" />
+    <Compile Include="GeoLocationMessageControl.xaml.cs">
+      <DependentUpon>GeoLocationMessageControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ImageConverter.cs" />
     <Compile Include="LogoutMessageControl.xaml.cs">
       <DependentUpon>LogoutMessageControl.xaml</DependentUpon>
@@ -115,6 +118,10 @@
     <Page Include="DetailsPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="GeoLocationMessageControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="LogoutMessageControl.xaml">
       <SubType>Designer</SubType>
@@ -185,6 +192,7 @@
     </None>
     <Resource Include="Images\myscience_1_panorama.png" />
     <Resource Include="Images\myscience_1_login.png" />
+    <Resource Include="Images\raindrops.png" />
     <Content Include="ServiceReferences.ClientConfig">
       <SubType>Designer</SubType>
     </Content>
